# briefing

./: .env.example  CLAUDE.md  Cargo.toml  README.md  smart-brevity-design.md
.github/workflows/: ci.yml
crates/collect-stories/: Cargo.toml
crates/collect-stories/src/: main.rs
crates/prepare-briefing/: Cargo.toml
crates/prepare-briefing/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: briefing.rs  clustering.rs  config.rs  cookies.rs  extractor.rs  io.rs  lib.rs  main.rs  models.rs  net.rs  raindrop.rs  summarizer.rs  time.rs
docs/: memory.md
