[package]
name = "collect-stories"
version = "1.0.1"
edition = "2021"
authors = ["Leo Laporte"]

[[bin]]
name = "collect-stories"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dirs = "6"
serde_json = { workspace = true }
